# RustedTorch

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md  claude.sh
examples/: README.md  autograd_example.rs  basic_tensor_operations.rs  mathematical_functions.rs  neural_network_basics.rs
src/: lib.rs
src/autograd/: autograd_meta.rs  function.rs  mod.rs  tests.rs
src/data/: dataloader.rs  dataset.rs  mod.rs  tests.rs
src/functions/: activation.rs  conv.rs  linear.rs  loss.rs  mod.rs  tests.rs
src/operations/: elemwise.rs  linalg.rs  mod.rs  reduce.rs  transform.rs
src/optimizers/: adam.rs  adamw.rs  mod.rs  sgd.rs  tests.rs
src/serialization/: checkpoint.rs  mod.rs  model_state.rs  tests.rs
src/tensor/: broadcasting.rs  device.rs  dtype.rs  mod.rs  options.rs  scalar.rs  storage.rs  tensor.rs  tensor_impl.rs  tests.rs
